@@ -514,105 +514,11 @@ static gboolean menu_key_pressed(GtkWidget *widget, GdkEventKey *event, gpointer
   return FALSE;
 }
 
-/* Generates the small history menu */
-static gboolean show_history_menu(gpointer data)
+static GtkWidget *create_history_menu(GtkWidget *history_menu)
 {
-  /* Declare some variables */
-  GtkWidget *menu, *menu_item, *item_label;
-  
-  /* Create the menu */
-  menu = gtk_menu_new();
-  g_signal_connect((GObject*)menu, "selection-done", (GCallback)gtk_widget_destroy, NULL);
-  g_signal_connect((GObject*)menu, "key-press-event", (GCallback)menu_key_pressed, NULL);
-  /* Items */
-  if ((history != NULL) && (history->data != NULL))
-  {
-    /* Declare some variables */
-    GList* element;
-    gint element_number = 0;
-    gint element_number_small = 0;
-    gchar* primary_temp = gtk_clipboard_wait_for_text(primary);
-    gchar* clipboard_temp = gtk_clipboard_wait_for_text(clipboard);
-    /* Reverse history if enabled */
-    if (prefs.reverse_history)
-    {
-      history = g_list_reverse(history);
-      element_number = g_list_length(history) - 1;
-    }
-    /* Go through each element and adding each */
-    for (element = history; (element != NULL) && (element_number_small < prefs.items_menu); element = element->next)
-    {
-      history_item *elem_data = element->data;
-      GString* string = g_string_new((gchar*)elem_data->content);
-      /* Ellipsize text */
-      string = ellipsize_string(string);
-      /* Remove control characters */
-      string = remove_newlines_string(string);
-      /* Make new item with ellipsized text */
-      gchar* list_item;
-      if (prefs.show_indexes)
-      {
-        list_item = g_strdup_printf("%d. %s", (element_number_small+1), string->str);
-      } else {
-        list_item = g_strdup(string->str);
-      }
-      menu_item = gtk_menu_item_new_with_label(list_item);
-      g_signal_connect((GObject*)menu_item, "activate", (GCallback)item_selected, GINT_TO_POINTER(element_number));
-
-      /* Modify menu item label properties */
-      item_label = gtk_bin_get_child((GtkBin*)menu_item);
-      gtk_label_set_single_line_mode((GtkLabel*)item_label, prefs.single_line);
-
-      /* Check if item is also clipboard text and make bold */
-      if ((clipboard_temp) && (g_strcmp0((gchar*)elem_data->content, clipboard_temp) == 0))
-      {
-        gchar* bold_text = g_markup_printf_escaped("<b>%s</b>", list_item);
-        gtk_label_set_markup((GtkLabel*)item_label, bold_text);
-        g_free(bold_text);
-      }
-      else if ((primary_temp) && (g_strcmp0((gchar*)elem_data->content, primary_temp) == 0))
-      {
-        gchar* italic_text = g_markup_printf_escaped("<i>%s</i>", list_item);
-        gtk_label_set_markup((GtkLabel*)item_label, italic_text);
-        g_free(italic_text);
-      }
-      g_free(list_item);
-      /* Append item */
-      gtk_menu_shell_append((GtkMenuShell*)menu, menu_item);
-      /* Prepare for next item */
-      g_string_free(string, TRUE);
-      if (prefs.reverse_history)
-        element_number--;
-      else
-        element_number++;
-        element_number_small++;
-    }
-    /* Cleanup */
-    g_free(primary_temp);
-    g_free(clipboard_temp);
-    /* Return history to normal if reversed */
-    if (prefs.reverse_history)
-      history = g_list_reverse(history);
-  }
-  else
-  {
-    /* Nothing in history so adding empty */
-    menu_item = gtk_menu_item_new_with_label(_("Empty"));
-    gtk_widget_set_sensitive(menu_item, FALSE);
-    gtk_menu_shell_append((GtkMenuShell*)menu, menu_item);
-  }
-  /* Popup the menu... */
-  gtk_widget_show_all(menu);
-  gtk_menu_popup((GtkMenu*)menu, NULL, NULL, NULL, NULL, 1, gtk_get_current_event_time());
-  gtk_menu_shell_select_first((GtkMenuShell*)menu, TRUE);
-  /* Return FALSE so the g_timeout_add() function is called only once */
-  return FALSE;
-}
-
-static GtkWidget *create_tray_menu(GtkWidget *tray_menu)
-{
-	GtkWidget *menu_item, *menu_image, *item_label;
-	tray_menu = gtk_menu_new();
+	GtkWidget *menu_item, *item_label;
+	history_menu = gtk_menu_new();
+	g_signal_connect((GObject*)history_menu, "key-press-event", (GCallback)menu_key_pressed, NULL);
 	/* Items */
 	if ((history != NULL) && (history->data != NULL))
 	{
@@ -641,14 +547,12 @@ static GtkWidget *create_tray_menu(GtkWidget *tray_menu)
 			gchar* list_item;
 			if (prefs.show_indexes)
 			{
-				list_item = g_strdup_printf("%d. %s",
-								(element_number_small+1), string->str);
+				list_item = g_strdup_printf("%d. %s", (element_number_small+1), string->str);
 			} else {
 				list_item = g_strdup(string->str);
 			}
 			menu_item = gtk_menu_item_new_with_label(list_item);
-			g_signal_connect((GObject*)menu_item,		"activate",
-					(GCallback)item_selected,	GINT_TO_POINTER(element_number));
+			g_signal_connect((GObject*)menu_item, "activate", (GCallback)item_selected, GINT_TO_POINTER(element_number));
 
 			/* Modify menu item label properties */
 			item_label = gtk_bin_get_child((GtkBin*)menu_item);
@@ -669,7 +573,7 @@ static GtkWidget *create_tray_menu(GtkWidget *tray_menu)
 			}
 			g_free(list_item);
 			/* Append item */
-			gtk_menu_shell_append((GtkMenuShell*)tray_menu, menu_item);
+			gtk_menu_shell_append((GtkMenuShell*)history_menu, menu_item);
 			/* Prepare for next item */
 			g_string_free(string, TRUE);
 			if (prefs.reverse_history)
@@ -690,8 +594,30 @@ static GtkWidget *create_tray_menu(GtkWidget *tray_menu)
 		/* Nothing in history so adding empty */
 		menu_item = gtk_menu_item_new_with_label(_("Empty"));
 		gtk_widget_set_sensitive(menu_item, FALSE);
-		gtk_menu_shell_append((GtkMenuShell*)tray_menu, menu_item);
+		gtk_menu_shell_append((GtkMenuShell*)history_menu, menu_item);
 	}
+	return history_menu;
+}
+
+/* Generates the history menu */
+static gboolean show_history_menu(gpointer data)
+{
+  /* Declare some variables */
+  GtkWidget *menu = gtk_menu_new();
+  menu = create_history_menu(menu);
+  g_signal_connect((GObject*)menu, "selection-done", (GCallback)gtk_widget_destroy, NULL);
+  /* Popup the menu... */
+  gtk_widget_show_all(menu);
+  gtk_menu_popup((GtkMenu*)menu, NULL, NULL, NULL, NULL, 1, gtk_get_current_event_time());
+  gtk_menu_shell_select_first((GtkMenuShell*)menu, TRUE);
+  /* Return FALSE so the g_timeout_add() function is called only once */
+  return FALSE;
+}
+
+static GtkWidget *create_tray_menu(GtkWidget *tray_menu)
+{
+	GtkWidget *menu_item, *menu_image;
+	tray_menu = create_history_menu(tray_menu);
 	/* -------------------- */
 	gtk_menu_shell_append((GtkMenuShell*)tray_menu, gtk_separator_menu_item_new());
 	/* About */
@@ -746,7 +672,6 @@ static void show_clipit_menu()
 	/* Create the menu */
 	statusicon_menu = create_tray_menu(statusicon_menu);
 	g_signal_connect((GObject*)statusicon_menu, "selection-done", (GCallback)gtk_widget_destroy, NULL);
-	g_signal_connect((GObject*)statusicon_menu, "key-press-event", (GCallback)menu_key_pressed, NULL);
 	/* GENERATE THE MENU*/
 	gtk_widget_set_visible(statusicon_menu, TRUE);
 	gtk_menu_popup((GtkMenu*)statusicon_menu, NULL, NULL, gtk_status_icon_position_menu, status_icon, 1, gtk_get_current_event_time());
